Hopefully final css change due to h2 tags at 80% Fixed editor h2 tags to 300px rather than 80% as this caused div wrapping issues.

--- a/rdlogmanager/clock/css/clock.css
+++ b/rdlogmanager/clock/css/clock.css
@@ -25,7 +25,7 @@ h2 {
 
 #editor h2 {
 
-  width: 80%;
+  width: 300px;
 
 }
 
